@@ -94,6 +94,13 @@ AC_COMPILE_IFELSE([AC_LANG_SOURCE(
   AC_MSG_RESULT([no])
 ])
 
+dnl Build tools
+buildtools="yes"
+AC_ARG_ENABLE(buildtools, AC_HELP_STRING([--disable-buildtools],
+        [disable voikkovfstc]),
+        [buildtools=${enableval}], [buildtools=yes])
+AM_CONDITIONAL([HAVE_BUILDTOOLS], [test x$buildtools = xyes])
+
 dnl Test tools
 testtools="yes"
 AC_ARG_ENABLE(testtools, AC_HELP_STRING([--disable-testtools],
